--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -6,7 +6,11 @@ html(lang='en')
     title= title
     block css
       link(rel='stylesheet', href='/css/style.css')
+      link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.css')
+      link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap-theme.css')
     block js
       script(src='http://localhost:35729/livereload.js')
+      script(src='/components/jquery/jquery.min.js')
+      script(src='/js/script.js')
   body
     block content
