--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -11,6 +11,7 @@ html(lang='en')
     block js
       script(src='http://localhost:35729/livereload.js')
       script(src='/components/jquery/jquery.min.js')
+      script(src='/components/leapjs/leap.min.js')
       script(src='/js/script.js')
   body
     block content
