Basic RTC connection established

--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,4 +1,19 @@
 extends ../layout
 
 block content
-  h1 Welcome to ski motion!
+
+  #container
+    #main
+      h2 The Demo
+      // show
+      #demoContainer
+        #connectControls
+          #iam Not yet connected...
+          br
+          strong Connected users:
+          #otherClients
+        #videos
+          video#selfVideo.easyrtcMirror(autoplay='autoplay', muted='muted', volume='0')
+          div(style='position: relative; float: left;')
+            video#callerVideo(autoplay='autoplay')
+          // each caller video needs to be in it's own div so it's close button can be positioned correctly
