Added debug and set up data for the server browser

--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -2,18 +2,27 @@ extends ../layout
 
 block content
 
-  #container
+  .container
     #main
-      h2 The Demo
-      // show
-      #demoContainer
-        #connectControls
-          #iam Not yet connected...
-          br
-          strong Connected users:
-          #otherClients
-        #videos
-          video#selfVideo.easyrtcMirror(autoplay='autoplay', muted='muted', volume='0')
-          div(style='position: relative; float: left;')
-            video#callerVideo(autoplay='autoplay')
-          // each caller video needs to be in it's own div so it's close button can be positioned correctly
+      .row
+        .col-lg-12
+          h2 The Demo
+          // show
+          #demoContainer
+            #connectControls
+              #iam Not yet connected...
+              br
+              strong Connected users:
+              #otherClients
+            #videos
+              video#selfVideo.easyrtcMirror(autoplay='autoplay', muted='muted', volume='0')
+              div(style='position: relative; float: left;')
+                video#callerVideo(autoplay='autoplay')
+              // each caller video needs to be in it's own div so it's close button can be positioned correctly
+  .container
+    .row
+      .col-lg-12
+        .form-group
+          label Choose a name
+          input#name
+          button#connect Go!
