added terrain in the and camera

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -12,6 +12,12 @@ html(lang='en')
       script(src='http://localhost:35729/livereload.js')
       script(src='/components/jquery/jquery.min.js')
       script(src='/components/leapjs/leap.min.js')
+      script(src='/js/three.js')
+      script(src='/js/FirstPersonControls.js')
+      script(src='/js/ImprovedNoise.js')
+      script(src='/js/Detector.js')
+      script(src='/js/stats.min.js')
       script(src='/js/script.js')
+      script(src='/js/draw_terrain.js')
   body
     block content
