--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -2,23 +2,22 @@ extends ../layout
 
 block content
 
-  .container
-    #main
-      .row
-        .col-lg-12
-          h2 The Demo
-          // show
-          #demoContainer
-            #connectControls
-              #iam Not yet connected...
-              br
-              strong Connected users:
-              #otherClients
-            #videos
-              video#selfVideo.easyrtcMirror(autoplay='autoplay', muted='muted', volume='0')
-              div(style='position: relative; float: left;')
-                video#callerVideo(autoplay='autoplay')
-              // each caller video needs to be in it's own div so it's close button can be positioned correctly
+  .container.hidden
+    .row
+      .col-lg-12
+        h2 The Demo
+        // show
+        #demoContainer
+          #connectControls
+            #iam Not yet connected...
+            br
+            strong Connected users:
+            #otherClients
+          #videos
+            video#selfVideo.easyrtcMirror(autoplay='autoplay', muted='muted', volume='0')
+            div(style='position: relative; float: left;')
+              video#callerVideo(autoplay='autoplay')
+            // each caller video needs to be in it's own div so it's close button can be positioned correctly
   .container
     .row
       .col-lg-12
