--- a/app/views/game/index.jade
+++ b/app/views/game/index.jade
@@ -1,165 +1,12 @@
 extends ../layout
 block content
 
-  #container
-    canvas(width='1399', height='739')
-    #stats(style='width: 80px; opacity: 0.9; cursor: pointer; position: absolute; top: 0px;')
-      #fps(style='padding: 0px 0px 3px 3px; text-align: left; background-color: rgb(0, 0, 34);')
-      #fpsText(style='color: rgb(0, 255, 255); font-family: Helvetica, Arial, sans-serif; font-size: 9px; font-weight: bold; line-height: 15px;') 58 FPS (0-61)
-      #fpsGraph(style='position: relative; width: 74px; height: 30px; background-color: rgb(0, 255, 255);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12.900000000000002px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 27.9px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 14.1px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12.3px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12.3px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12.3px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 13.5px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12.600000000000001px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 15.9px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 15px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 13.5px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 13.799999999999997px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 15px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12.3px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12.3px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12.3px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 13.2px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 15.600000000000001px; float: left; background-color: rgb(17, 17, 51);')
-        span(style='width: 1px; height: 12.600000000000001px; float: left; background-color: rgb(17, 17, 51);')
-      #ms(style='padding: 0px 0px 3px 3px; text-align: left; background-color: rgb(0, 34, 0); display: none;')
-      #msText(style='color: rgb(0, 255, 0); font-family: Helvetica, Arial, sans-serif; font-size: 9px; font-weight: bold; line-height: 15px;') 17 MS (0-15575)
-      #msGraph(style='position: relative; width: 74px; height: 30px; background-color: rgb(0, 255, 0);')
-        span(style='width: 1px; height: 25.05px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 28.05px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.3px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.15px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 25.35px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 29.55px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 25.5px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.3px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 24.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 28.2px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.3px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 19.5px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 28.95px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 29.85px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 22.65px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 29.85px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.6px; float: left; background-color: rgb(17, 51, 17);')
-        span(style='width: 1px; height: 27.45px; float: left; background-color: rgb(17, 51, 17);')
-    #info
-    a(href='http://threejs.org/', target='_blank') three.js
-    | - webgl terrain demo
-    br
-    | (left click: forward, right click: backward)
+  #gameCanvas
+  #scoreboard
+    h1#scores 0-0
+    h1#title 3D PONG
+    h2#winnerBoard First to 7 wins!
+    h3
+      | A - move left
+      br
+      | D - move right
