--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -13,11 +13,9 @@ html(lang='en')
       script(src='/components/jquery/jquery.min.js')
       script(src='/components/leapjs/leap.min.js')
       script(src='/js/three.js')
-      script(src='/js/FirstPersonControls.js')
-      script(src='/js/ImprovedNoise.js')
-      script(src='/js/Detector.js')
       script(src='/js/stats.min.js')
       script(src='/js/script.js')
-      script(src='/js/draw_terrain.js')
+      script(src='/js/keyboard.js')
+      script(src='/js/game.js')
   body
     block content
