Added in d3, lobby generation code, NUI selection

--- a/app/views/leap/index.jade
+++ b/app/views/leap/index.jade
@@ -1,9 +1,7 @@
 ﻿extends ../layout
 
 block append js
-  script(src='/components/leapjs/leap.min.js')
-  script(src='/js/leap-test.js')
-
+  != js("leap-test")
 
 block content
   h1 Leap Javascript Sample
@@ -12,15 +10,5 @@ block content
     #frameData
     div(style='clear:both;')
         
-    h3 Hand data:
-    #handData
-    div(style='clear:both;')
-        
-    h3 Finger and tool data:
-    #pointableData
-    div(style='clear:both;')
- 
-    h3 Gesture data:
-    #gestureData
-        
-        
+    h3 Tool Test:
+    #lobby.container
