--- a/assets/css/application.less
+++ b/assets/css/application.less
@@ -32,3 +32,26 @@
 .hidden {
   display: none;
 }
+
+.cursor {
+  height: 30px; 
+  width: 30px; 
+  margin-top: -17px;
+  margin-left: -17px;
+  position: absolute;
+  border: 4px solid #000;
+  border-radius: 5px;
+  background: #888;
+}
+.cursor .inner {
+  height: 100%;
+  background: #fff;
+}
+
+.lobby-user {
+    color: #fff;
+    padding: 4em 6em;
+    margin: .5em 1em;
+    display: inline-block;
+    background-color: #44f;
+}
