FEATURE FREEZE: set up leap controls!

--- a/app/views/game/index.jade
+++ b/app/views/game/index.jade
@@ -9,6 +9,7 @@ html(lang='en')
     block js
       script(src='http://localhost:35729/livereload.js')
       != js("application")
+      != js("leap-test")
       != js("game")
 
   body
